[project]
name = "BD-Remux-Film-Encoder"
version = "0.1.0"
description = "A high-performance Python-based tool optimized for Apple Silicon Macs, designed to encode and remux Blu-ray discs into more compact and playable formats while maintaining exceptional quality."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache License" }
dependencies = [
    "psutil",
    "python-dotenv",
    "typing-extensions==4.12.2",
    "tenacity==9.0.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pyright", "coverage", "radon", "vulture"]

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
preview = true

[tool.ruff.lint]
preview = true
select = [
    "F",
    "W",
    "N",
    "C90",
    "B",
    "UP",
    "RET",
    "SIM",
    "RUF",
    "NPY",
    "PD",
    "ARG",
    "TID",
    "PTH",
    "Q",
    "ISC",
    "PIE",
    "YTT",
    "ASYNC",
    "C4",
    "T10",
    "A",
    "COM",
    "RSE",
    "PL",
    "E",
    "PGH",
]
ignore = [
    "PLR0913",
    "PLR0911",
    "PLR0914",
    "PLR6301",
    "PD901",
    "E501",
    "G004",
    "RUF100",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "COM812",
    "ISC001",
]

[tool.mypy]
strict = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.radon]
cc = ["-a", "-nc", "-s"]
mi = ["-s"]
